wrote css for charcter website and some changes in html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Wreck-it Ralph</title>
 	<!-- for fave icon -->
 	<link rel="icon" href="img/Ralph.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element kung pano mag comment or // in java -->
@@ -17,7 +19,7 @@
 	<h2>About Ralph</h2>
 	<p>Ralph is awosome! He's an 8-bit videogame bad guy who travels the lenght of the arcade to prove that he's a good guy</p>
 	<img src="img/large.jpeg">
-	<p>RAlph and his friends</p>
+	<p class="caption">RAlph and his friends</p>
 	
 	<!--Characteristics  -->
 	<h2>RAlph's Characteristics</h2>
